--- a/MyGWT-Ext/.classpath
+++ b/MyGWT-Ext/.classpath
@@ -5,6 +5,6 @@
 	<classpathentry combineaccessrules="false" kind="src" path="/MyGWT"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="com.google.gwt.eclipse.core.GWT_CONTAINER"/>
-	<classpathentry kind="lib" path="/MyWTApp/war/WEB-INF/lib/gwtext.jar"/>
+	<classpathentry kind="lib" path="lib/gwtext.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
