--- a/MyGWT/.classpath
+++ b/MyGWT/.classpath
@@ -5,5 +5,6 @@
 	<classpathentry kind="con" path="com.google.gwt.eclipse.core.GWT_CONTAINER"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/Persistence"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/Beans"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
