--- a/MyGWTExt/.classpath
+++ b/MyGWTExt/.classpath
@@ -7,5 +7,7 @@
 	<classpathentry kind="con" path="com.google.gwt.eclipse.core.GWT_CONTAINER"/>
 	<classpathentry kind="lib" path="lib/gwtext.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/Expressions"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/Beans"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/Utils"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
