--- a/MyWT/.classpath
+++ b/MyWT/.classpath
@@ -4,5 +4,7 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/Expressions"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/Persistence"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/Beans"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/Utils"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
